--- a/interface.ui
+++ b/interface.ui
@@ -93,7 +93,7 @@ QLabel{
 	border-top-right-radius: 8px;
 	border-bottom-right-radius: 8px;
 }
-#frame_20, #frame_11, #frame_8, #frame_26{
+#frame_20, #frame_11, #frame_8, #frame_26, #frame_40, #frame_55, #frame_56{
 	border: 1px solid;
 	border-color: rgba(0, 0, 0, 0.1);
 	border-radius: 8px;
